--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Dimmed theme is a experimental dimming syntax color scheme and minimal theme for VSCode",
     "version": "0.0.1",
     "author": "Shoizz (https://github.com/Shoizz)",
+    "publisher": "Shoizz",
     "engines": {
         "vscode": "^1.31.0"
     },
